force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/VCG_CPQ_Pricing_Condition_Data__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Condition Data</label>
    <nameField>
        <displayFormat>CD{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Condition Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>