force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <referenceTo>VCG_CPQ_Pricing_Condition__c</referenceTo>
    <relationshipLabel>Pricing Condition Data</relationshipLabel>
    <relationshipName>Pricing_Condition_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>