force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Data_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Key__c</fullName>
    <label>Data Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>