force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Data_Scale_3__c.field-meta.xml
<CustomField>
    <fullName>Data_Scale_3__c</fullName>
    <description>Scale is set to 4 so we can store values for currencies that have 3 decimal places, plus 1 extra decimal place for additional precision (to better handle rounding).</description>
    <label>Data Scale 3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>