force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Multiply_by_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Multiply_by_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, the resulting value will be multiplied by the line quantity to give the line total. Otherwise the line total will be the result value.</inlineHelpText>
    <label>Multiply by Quantity?</label>
    <type>Checkbox</type>
</CustomField>