force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product with which this Pricing Condition record is associated (if any).</description>
    <inlineHelpText>Product with which this Pricing Condition record is associated (if any).</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Pricing Condition Data</relationshipLabel>
    <relationshipName>VCG_CPQ_Pricing_Condition_Data</relationshipName>
    <type>Lookup</type>
</CustomField>