force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currency Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>