force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Result_Value_String__c.field-meta.xml
<CustomField>
    <fullName>Result_Value_String__c</fullName>
    <label>Result Value String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>