force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <formula>HYPERLINK(&apos;javascript:/*&apos;
    &amp; Data_Key__c
    &amp; &apos;-&apos; &amp; TEXT(1000000+Data_Scale_1__c)
    &amp; &apos;-&apos; &amp; TEXT(1000000+Data_Scale_2__c)
    &amp; &apos;-&apos; &amp; TEXT(1000000+Data_Scale_3__c)
    &amp; &apos;*/void(0);&apos;, &apos;*&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <type>Text</type>
</CustomField>