force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Condition__c</columns>
    <columns>Data_Key__c</columns>
    <columns>Data_Scale_1__c</columns>
    <columns>Data_Scale_2__c</columns>
    <columns>Product__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Result_Value__c</columns>
    <columns>Result_Value_String__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>