force-app/main/default/objects/VCG_CPQ_Pricing_Condition_Data__c/listViews/Mexico_prices.listView-meta.xml
<ListView>
    <fullName>Mexico_prices</fullName>
    <columns>NAME</columns>
    <columns>Condition__c</columns>
    <columns>Data_Key__c</columns>
    <columns>Product__c</columns>
    <columns>Result_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Condition__c</field>
        <operation>contains</operation>
        <value>MX</value>
    </filters>
    <label>Mexico prices</label>
    <language>en_US</language>
</ListView>